<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:orientation="vertical"
    android:gravity="center"
    style="@style/general">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/screen_dark"
        app:cardCornerRadius="10dp"
        android:layout_margin="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/infoImg"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/pokeball"
                android:contentDescription="@string/pokedex" />
            <TextView
                android:id="@+id/infoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NOMBRE"
                android:layout_gravity="center"
                style="@style/info"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/infoHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_height"
                style="@style/info" />
            <TextView
                android:id="@+id/infoWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_weight"
                style="@style/info"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp">
                <ImageView
                    android:id="@+id/infoType1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"/>
                <ImageView
                    android:id="@+id/infoType2"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>